# ImageProcessing

./: ImageProcessing.sln  README.md
ImageProcessing/: CMakeLists.txt  ImageProcessing.vcxproj  ImageProcessing.vcxproj.filters
ImageProcessing/include/: Image.h  filters.h  noise.h  transforms.h  utils.h
ImageProcessing/src/: Image.cpp  filters.cpp  main.cpp  noise.cpp  procdir.cpp  transforms.cpp  utils.cpp
